# nipdf

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  bacon.toml  names
cff-parser/: Cargo.toml
cff-parser/src/: 68.cff  inner.rs  lib.rs  sample.cff  tests.rs
cff-parser/src/inner/: predefined_charsets.rs  predefined_encodings.rs  tests.rs
dump/: Cargo.toml
dump/src/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs  pdf_object_impl.rs
nipdf/: Cargo.toml
nipdf-reader/: Cargo.toml
nipdf-reader/src/: app_state.rs  main.rs  view.rs
nipdf-reader/src/view/: error.rs  viewer.rs
nipdf/benches/: page_render.rs
nipdf/src/: ccitt.rs  file.rs  function.rs  graphics.rs  lib.rs  object.rs  parser.rs  run_length.rs  text.rs
nipdf/src/ascii85/: tests.rs
nipdf/src/ascii85/snapshots/: nipdf__ascii85__tests__decode.snap
nipdf/src/ccitt/: ccitt-false-end-of-block  group3-1d  group3-1d-false-end-of-block  group3-2d  group4-actual-no-end-block  tests.rs
nipdf/src/ccitt/snapshots/: nipdf__ccitt__tests__decode_group4.snap  nipdf__ccitt__tests__false_end_of_block.snap  nipdf__ccitt__tests__group3_1d.snap  nipdf__ccitt__tests__group3_2d.snap  nipdf__ccitt__tests__impl.snap  (+4 more)
nipdf/src/file/: encrypt.rs  page.rs  render_tests.rs  tests.rs
nipdf/src/function/: tests.rs
nipdf/src/graphics/: color_space.rs  inline-image-ascii85  pattern.rs  shading.rs  tests.rs  trans.rs
nipdf/src/object/: frame.rs  indirect_object.rs  stream.rs  tests.rs  xref.rs
nipdf/src/parser/: file.rs  object.rs  tests.rs
nipdf/src/text/: cmap.rs  tests.rs
nipdf/tests/: page_render_1.rs  page_render_2.rs  parse_objects_test.rs
nipdf/tests/snapshots/: page_render_1__image_separation_color_space.snap  page_render_2__axial_shade.snap  page_render_2__clip_mask.snap  page_render_2__decrypt_aes_revion3.snap  page_render_2__form.snap  page_render_2__form_ctm.snap  page_render_2__image_mask_cal_rgb_index_color_space.snap  page_render_2__mask_image.snap  page_render_2__not_embed_type1_load_ttf_from_os.snap  page_render_2__pattern_color.snap  page_render_2__radial_shade.snap  page_render_2__standard_14_font_alias_name.snap  page_render_2__type0_cid_font.snap
pdf2docx/: Cargo.toml
pdf2docx/src/: file.rs  function.rs  graphics.rs  lib.rs  object.rs  parser.rs  text.rs
pdf2docx/src/ascii85/: ascii85-1
pdf2docx/src/ccitt/: tests.rs
pdf2docx/src/file/: page.rs  tests.rs
pdf2docx/src/function/: tests.rs
pdf2docx/src/graphics/: pattern.rs  tests.rs
pdf2docx/src/object/: indirect_object.rs  stream.rs  tests.rs  xref.rs
pdf2docx/src/parser/: file.rs  graphics.rs  object.rs  tests.rs
pdf2docx/src/text/: tests.rs
pdf2docx/tests/: parse_objects_test.rs
prescript/: Cargo.toml  build.rs
prescript/src/: __private.rs  cmap.rs  encoding.rs  lib.rs  machine.rs  name.rs  parser.rs  pdf_fn.rs  type1.rs
prescript/src/cmap/: test.cmap  tests.rs  use-cmap.ps
prescript/src/machine/: cidinit.rs  decrypt.rs  tests.rs  to-unicode-cmap
prescript/src/name/: built_in_names.rs
prescript/src/parser/: tests.rs
prescript/src/pdf_fn/: tests.rs
prescript/src/type1/: file-header-loose-ending.pfb  tests.rs
reader/: Cargo.toml
reader/src/: app_state.rs  main.rs
reader/src/view/: error.rs  viewer.rs  welcome.rs
render/: Cargo.toml
render/benches/: page_render.rs
render/src/: into_skia.rs  lib.rs  render.rs  render_tests.rs  shading.rs
render/src/shading/: tests.rs
render/src/snapshots/: nipdf_render__render_tests__axial_shade.snap  nipdf_render__render_tests__axial_shade.snap.new  nipdf_render__render_tests__axial_shade_with_sample_function.snap  nipdf_render__render_tests__axial_shade_with_sample_function.snap.new  nipdf_render__render_tests__clip_mask.snap  nipdf_render__render_tests__clip_mask.snap.new  nipdf_render__render_tests__decrypt_aes_revion3.snap  nipdf_render__render_tests__decrypt_aes_revion3.snap.new  nipdf_render__render_tests__form.snap  nipdf_render__render_tests__form.snap.new  nipdf_render__render_tests__form_ctm.snap  nipdf_render__render_tests__form_ctm.snap.new  nipdf_render__render_tests__image_mask_cal_rgb_index_color_space.snap  nipdf_render__render_tests__image_mask_cal_rgb_index_color_space.snap.new  nipdf_render__render_tests__mask_image.snap  nipdf_render__render_tests__mask_image.snap.new  nipdf_render__render_tests__pattern_color.snap  nipdf_render__render_tests__pattern_color.snap.new  nipdf_render__render_tests__radial_shade.snap  nipdf_render__render_tests__radial_shade.snap.new  nipdf_render__render_tests__standard_14_font_alias_name.snap  nipdf_render__render_tests__standard_14_font_alias_name.snap.new  nipdf_render__render_tests__text_clip_path.snap  nipdf_render__render_tests__tile_pattern_with_very_large_b_box.snap  nipdf_render__render_tests__tile_pattern_with_very_large_b_box.snap.new  nipdf_render__render_tests__todo_coons_patch_mesh_shading.snap  nipdf_render__render_tests__todo_coons_patch_mesh_shading.snap.new  nipdf_render__render_tests__todo_glyph_encoding_problem.snap  nipdf_render__render_tests__todo_glyph_encoding_problem.snap.new  nipdf_render__render_tests__todo_interactive_form.snap  nipdf_render__render_tests__todo_interactive_form.snap.new  nipdf_render__render_tests__todo_radius_patten_without_extension.snap  nipdf_render__render_tests__todo_radius_patten_without_extension.snap.new  nipdf_render__render_tests__todo_radius_pattern.snap  nipdf_render__render_tests__todo_radius_pattern.snap.new  nipdf_render__render_tests__todo_rotate_n_encrypt_alg2.snap  nipdf_render__render_tests__todo_rotate_n_encrypt_alg2.snap.new  nipdf_render__render_tests__todo_tensor_product_patch_mesh_shading.snap  nipdf_render__render_tests__transparent.snap  nipdf_render__render_tests__transparent.snap.new  (+9 more)
render/tests/: page_render_1.rs
render/tests/snapshots/: page_render_1__image_separation_color_space.snap
type1-parser/: Cargo.toml
type1-parser/src/: inner.rs  lib.rs  machine.rs  p052024l.pfa  parser.rs
type1-parser/src/inner/: tests.rs
type1-parser/src/machine/: cmsy9.pfb  decrypt.rs  tests.rs
type1-parser/src/parser/: tests.rs
(+167 files in other folders)
