[workspace]
members = ["nipdf", "macro", "dump", "reader", "cff-parser"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.insta]
opt-level = 3

[profile.release]
split-debuginfo = "unpacked"
# lto = true
codegen-units = 1
# Uncomment next line to emb more symbols for profiling
# debug = 1

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1
