[workspace]
members = [
    "nipdf",
    "macro",
    "test-macro",
    "dump",
    "reader",
    "cff-parser",
    "prescript",
    "render",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.insta]
opt-level = 3

[profile.release]
split-debuginfo = "unpacked"
# lto = true
codegen-units = 1
# Uncomment next line to emb more symbols for profiling
# debug = 1

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1

[workspace.lints.clippy]
empty_structs_with_brackets = "warn"
dbg_macro = "deny"
get_unwrap = "warn"
if_then_some_else_none = "warn"
large_include_file = "warn"
rc_buffer = "warn"
redundant_type_annotations = "warn"
verbose_file_reads = "warn"
collection_is_never_read = "warn"
debug_assert_with_mut_call = "warn"
imprecise_flops = "warn"
manual_clamp = "warn"
needless_collect = "warn"
or_fun_call = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
# missing_asserts_for_indexing = "warn"
implied_bounds_in_impls = "warn"
needless_pass_by_ref_mut = "warn"
explicit_deref_methods = "warn"
