[workspace]
members = [
    "nipdf",
    "macro",
    "test-macro",
    "dump",
    "reader",
    "cff-parser",
    "prescript",
    "render",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.insta]
opt-level = 3

[profile.release]
split-debuginfo = "unpacked"
# lto = true
codegen-units = 1
# Uncomment next line to emb more symbols for profiling
# debug = 1

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
hex = { version = "0.4" }
thiserror = "1.0"
once_cell = "1.20"
nom = "7.1"
num-traits = "0.2"
memchr = "2.7"
anyhow = "1.0"
ahash = { version = "0.8", features = ["no-rng"] }
log = "0.4"
jpeg-decoder = { version = "0.3", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
bitstream-io = "2.5"
strum = { version = "0.26", features = ["derive"] }
bitvec = "1.0"
jpeg2k = "0.9"
educe = "0.6"
pretty = "0.12"
bitflags = "2.6"
fontdb = "0.23"
font-kit = { version = "0.14", features = ["loader-freetype"] }
pathfinder_geometry = "0.5"
weezl = "0.1"
either = "1.13"
euclid = "0.22"
ttf-parser = { version = "0.25", features = ["gvar-alloc"] }
ouroboros = "0.18"
md-5 = "0.10"
arc4 = "0.1"
heck = "0.5"
paste = "1.0"
tinyvec = { version = "1.8", features = ["rustc_1_57"] }
static_assertions = "1.1"
aes = "0.8"
cbc = "0.1"
phf = { version = "0.11", features = ["macros"] }
miniz_oxide = "0.8"
encoding_rs = "0.8"
env_logger = "0.11"
glob = "0.3"
insta = { version = "1.40", features = ["ron"] }
assert_approx_eq = "1.1"
test-case = "3.3"
test-log = "0.2"
hex-literal = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
map-macro = "0.3"
winnow = { version = "0.6", features = ["simd"] }
ascii85 = "0.2"
kstring = { version = "2.0", features = ["max_inline"] }
itertools = "0.13"
clap = { version = "4.5", features = ["derive"] }
mimalloc = "0.1"

[workspace.lints.clippy]
empty_structs_with_brackets = "warn"
dbg_macro = "deny"
get_unwrap = "warn"
if_then_some_else_none = "warn"
large_include_file = "warn"
rc_buffer = "warn"
redundant_type_annotations = "warn"
verbose_file_reads = "warn"
collection_is_never_read = "warn"
debug_assert_with_mut_call = "warn"
imprecise_flops = "warn"
manual_clamp = "warn"
needless_collect = "warn"
or_fun_call = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
# missing_asserts_for_indexing = "warn"
implied_bounds_in_impls = "warn"
needless_pass_by_ref_mut = "warn"
explicit_deref_methods = "warn"
cast_possible_truncation = "warn"
