[package]
name = "cff-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
nom = "7.1.3"
paste = "1.0.14"
test-case = "3.2.1"
thiserror = "1.0.49"
prescript = { path = "../prescript" }
prescript-macro = { path = "../prescript-macro" }
either = "1.9.0"

[dev-dependencies]
map-macro = "0.2.6"
test-case = "3.2.1"

[lints]
workspace = true
