[package]
name = "cff-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library that parses CFF files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
nom = "7.1.3"
paste = "1.0.15"
test-case = "3.3.1"
thiserror = "1.0.63"
prescript = { path = "../prescript" }
either = "1.13.0"

[dev-dependencies]
map-macro = "0.3"
test-case = "3.3.1"

[lints]
workspace = true
