[package]
name = "cff-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library that parses CFF files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
nom.workspace = true
paste.workspace = true
test-case.workspace = true
thiserror.workspace = true
prescript = { path = "../prescript" }
either.workspace = true

[dev-dependencies]
map-macro.workspace = true
test-case.workspace = true

[lints]
workspace = true
