[package]
name = "nipdf-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipdf = { path = "../nipdf", features = ["pretty"] }
env_logger = { version = "0.10.0" }
clap = { version = "4.3.4", features = ["derive"] }
anyhow = "1.0.75"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
mimalloc = "0.1"

[lints]
workspace = true
