[package]
name = "nipdf-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipdf = { path = "../nipdf" }
nipdf-render = { path = "../render" }
env_logger = { version = "0.11.5" }
clap = { version = "4.5.13", features = ["derive"] }
anyhow = "1.0.86"
image = { version = "0.25.2", default-features = false, features = [
    "png",
    "jpeg",
] }
mimalloc = "0.1"

[lints]
workspace = true
