[package]
name = "nipdf-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipdf = { path = "../nipdf" }
nipdf-render = { path = "../render" }
env_logger.workspace = true
clap.workspace = true
anyhow.workspace = true
image = { workspace = true, features = [ "png", "jpeg" ] }
mimalloc.workspace = true

[lints]
workspace = true
