[package]
name = "nipdf-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A macro for nipdf crate"

[lib]
proc-macro = true

[dependencies]
either = "1.13.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full", "extra-traits"] }

[lints]
workspace = true
