[package]
name = "nipdf-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipdf = { path = "../nipdf" }
nipdf-macro = { path = "../nipdf-macro" }
env_logger = { version = "0.10.0" }
iced = { version = "0.10.0", features = ["image", "advanced"] }
tiny-skia = "0.11.2"
anyhow = "1.0.75"
iced_aw = { version = "0.7.0", default-features = false, features = [
    "modal",
    "card",
] }
directories-next = "2.0.0"
log = "0.4.20"

[features]
# enable iced debug, hit F12 to toggle iced debug display 
iced-debug = ["iced/debug"]
