[package]
name = "nipdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3" }
thiserror = "1.0.40"
once_cell = "1.17.2"
nom = "7.1.3"
num = "0.4.0"
memchr = "2.5.0"
anyhow = "1.0.71"
ahash = { version = "0.8", features = ["no-rng"] }
# use zlib instead of rust_backend, rust_backend failed decode artofwar.pdf Pg 141 (start 0)
flate2 = { version = "1.0.26", default-features = false, features = ["zlib"] }
log = "0.4"
jpeg-decoder = { version = "0.3.0", default-features = false }
image = { version = "0.24.6", default-features = false }
bitstream-io = "2.0"
strum = { version = "0.25.0", features = ["derive"] }
bitvec = "1.0.1"
jpeg2k = "0.6.6"
nipdf-macro = { path = "../macro" }
cff-parser = { path = "../cff-parser" }
prescript = { path = "../prescript" }
educe = "0.5.5"
pretty = "0.12.1"
bitflags = "2.4.0"
fontdb = "0.16.0"
font-kit = { version = "0.12", features = ["loader-freetype"] }
pathfinder_geometry = "0.5.1"
weezl = "0.1.7"
either = "1.9.0"
euclid = "0.22.9"
ttf-parser = { version = "0.20", features = ["gvar-alloc"] }
ouroboros = "0.18"
md-5 = "0.10"
arc4 = "0.1"
heck = "0.4"
paste = "1.0"
tinyvec = { version = "1.6", features = ["rustc_1_57"] }
static_assertions = "1.1.0"
aes = "0.8.3"
cbc = "0.1.2"

[dev-dependencies]
env_logger = "0.10.0"
glob = "0.3.1"
insta = { version = "1.29.0", features = ["ron"] }
assert_approx_eq = "1.1"
test-case = "3.1.0"
test-log = "0.2.12"
mockall = "0.12"
hex-literal = "0.4"

[lints]
workspace = true
