[package]
name = "nipdf"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A PDF library written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3" }
thiserror = "1.0.63"
once_cell = "1.19.0"
nom = "7.1.3"
num-traits = "0.2"
memchr = "2.7.4"
anyhow = "1.0.86"
ahash = { version = "0.8", features = ["no-rng"] }
log = "0.4"
jpeg-decoder = { version = "0.3.1", default-features = false }
image = { version = "0.25", default-features = false }
bitstream-io = "2.5"
strum = { version = "0.26.3", features = ["derive"] }
bitvec = "1.0.1"
jpeg2k = "0.9.1"
nipdf-macro = { path = "../macro" }
cff-parser = { path = "../cff-parser" }
prescript = { path = "../prescript" }
educe = "0.6.0"
pretty = "0.12.3"
bitflags = "2.6.0"
fontdb = "0.20.0"
font-kit = { version = "0.14", features = ["loader-freetype"] }
pathfinder_geometry = "0.5.1"
weezl = "0.1.8"
either = "1.13.0"
euclid = "0.22.10"
ttf-parser = { version = "0.24", features = ["gvar-alloc"] }
ouroboros = "0.18"
md-5 = "0.10"
arc4 = "0.1"
heck = "0.5"
paste = "1.0"
tinyvec = { version = "1.8", features = ["rustc_1_57"] }
static_assertions = "1.1.0"
aes = "0.8.4"
cbc = "0.1.2"
phf = { version = "0.11", features = ["macros"] }
miniz_oxide = "0.7"
encoding_rs = "0.8"

[dev-dependencies]
env_logger = "0.11.5"
glob = "0.3.1"
insta = { version = "1.39.0", features = ["ron"] }
assert_approx_eq = "1.1"
test-case = "3.3.1"
test-log = "0.2.16"
mockall = "0.13"
hex-literal = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
