[package]
name = "nipdf"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A PDF library written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex.workspace = true
thiserror.workspace = true
once_cell.workspace = true
nom.workspace = true
num-traits.workspace = true
memchr.workspace = true
anyhow.workspace = true
ahash.workspace = true
log.workspace = true
jpeg-decoder.workspace = true
image.workspace = true
bitstream-io.workspace = true
strum.workspace = true
bitvec.workspace = true
jpeg2k.workspace = true
nipdf-macro = { path = "../macro" }
cff-parser = { path = "../cff-parser" }
prescript = { path = "../prescript" }
educe.workspace = true
pretty.workspace = true
bitflags.workspace = true
fontdb.workspace = true
font-kit.workspace = true
pathfinder_geometry.workspace = true
weezl.workspace = true
either.workspace = true
euclid.workspace = true
ttf-parser.workspace = true
ouroboros.workspace = true
md-5.workspace = true
arc4.workspace = true
heck.workspace = true
paste.workspace = true
tinyvec.workspace = true
static_assertions.workspace = true
aes.workspace = true
cbc.workspace = true
phf.workspace = true
miniz_oxide.workspace = true
encoding_rs.workspace = true

[dev-dependencies]
env_logger.workspace = true
glob.workspace = true
insta.workspace = true
assert_approx_eq.workspace = true
test-case.workspace = true
test-log.workspace = true
mockall = "0.13"
hex-literal.workspace = true
image = { workspace = true, features = ["png"] }

[lints]
workspace = true
