[package]
name = "pdf2docx"
version = "0.1.0"
edition = "2021"
default-run = "dump-pdf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3" }
thiserror = "1.0.40"
once_cell = "1.17.2"
itertools = "0.10.5"
nom = "7.1.3"
num = "0.4.0"
memchr = "2.5.0"
nohash-hasher = "0.2.0"
anyhow = "1.0.71"
ahash = "0.8.3"
flate2 = "1.0.26"
log = { version = "0.4.19", features = ["release_max_level_warn"] }
clap = { version = "4.3.4", features = ["derive"], optional = true }
jpeg-decoder = "0.3.0"
image = { version = "0.24.6", default-features = false, features = [
    "png",
    "jpeg",
] }
env_logger = { version = "0.10.0", optional = true }
bitstream-io = "1.6.0"
strum = { version = "0.25.0", features = ["derive"] }
png = "0.17.9"
bitvec = "1.0.1"
jpeg2k = "0.6.6"
lazy_static = "1.4.0"
pdf2docx-macro = { path = "../pdf2docx-macro" }
arrayvec = "0.7.4"
tiny-skia = "0.11.1"
educe = "0.4.22"
lzw = "0.10.0"

[features]
clr = ["env_logger", "clap"]

# [lib]
# proc-macro = true

[dev-dependencies]
env_logger = "0.10.0"
glob = "0.3.1"
insta = "1.29.0"
static_assertions = "1.1.0"
test-case = "3.1.0"
test-log = "0.2.12"

[[bin]]
name = "dump-pdf"
required-features = ["clr"]
