[package]
name = "prescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow = { version = "0.5", features = ["simd"] }
log = "0.4"
either = "1.9.0"
memchr = "2.5.0"
ascii85 = "0.2.1"
educe = "0.4.22"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"

[dev-dependencies]
test-case = "3.1"
test-log = "0.2"
env_logger = "0.10"
