[package]
name = "prescript"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for parsing and executing Prescript scripts."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow.workspace = true
log.workspace = true
either.workspace = true
memchr.workspace = true
ascii85.workspace = true
educe.workspace = true
anyhow.workspace = true
hex.workspace = true
kstring.workspace = true
num-traits.workspace = true
tinyvec.workspace = true
phf.workspace = true
snafu.workspace = true

[dev-dependencies]
test-case.workspace = true
test-log.workspace = true
env_logger.workspace = true
static_assertions.workspace = true
assert_approx_eq.workspace = true

[lints]
workspace = true
