[package]
name = "nipdf-reader"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "iced pdf GUI reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipdf = { path = "../nipdf" }
nipdf-render = { path = "../render" }
env_logger = { version = "0.11.5" }
iced = { version = "0.12.1", features = ["image"] }
anyhow = "1.0.86"
iced_aw = { version = "0.9.3", default-features = false, features = [
    "modal",
    "card",
] }
directories-next = "2.0.0"
log = "0.4.22"
notify-rust = { version = "4", default-features = false, optional = true, features = [
    "d",
] }
mimalloc = "0.1"
clap = { version = "4.5", features = ["derive"] }

[features]
debug = ["notify-rust", "iced-debug", "iced_aw/menu"]
# enable iced debug, hit F12 to toggle iced debug display 
iced-debug = ["iced/debug"]

[lints]
workspace = true
