[package]
name = "nipdf-reader"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "iced pdf GUI reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipdf = { path = "../nipdf" }
nipdf-render = { path = "../render" }
env_logger.workspace = true
iced = { version = "0.12.1", features = ["image"] }
anyhow.workspace = true
iced_aw = { version = "0.9", default-features = false, features = [ "modal", "card" ] }
directories-next = "2.0.0"
log.workspace = true
notify-rust = { version = "4", default-features = false, optional = true, features = [ "d" ] }
mimalloc.workspace = true
clap.workspace = true

[features]
debug = ["notify-rust", "iced-debug", "iced_aw/menu"]
# enable iced debug, hit F12 to toggle iced debug display 
iced-debug = ["iced/debug"]

[lints]
workspace = true
