[package]
name = "nipdf-render"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "nipdf-render is a PDF renderer written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipdf = { path = "../nipdf" }
prescript = { path = "../prescript" }
log.workspace = true
anyhow.workspace = true
ahash.workspace = true
tiny-skia = "0.11.4"
either.workspace = true
euclid.workspace = true
image.workspace = true
educe.workspace = true
nom.workspace = true
num-traits.workspace = true

[dev-dependencies]
insta.workspace = true
test-case.workspace = true
md-5.workspace = true
hex.workspace = true
ureq = "2.10"
nipdf-test-macro = { path = "../test-macro" }
maplit = "1.0"
criterion = "0.5"
mimalloc.workspace = true
phf.workspace = true

[[bench]]
name = "page_render"
harness = false

[lints]
workspace = true
