[package]
name = "type1-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow = { version = "0.5", features = ["simd"] }
log = "0.4"
either = "1.9.0"
memchr = "2.5.0"
ascii85 = "0.2.1"
educe = "0.4.22"

[dev-dependencies]
test-case = "3.1.0"
